--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
-psutil==5.7.2
-cycler==0.10.0
-keyboard==0.13.5
-kiwisolver==1.2.0
-matplotlib==3.3.0
-numpy==1.19.1
-pandas==1.1.0
-patsy==0.5.1
-Pillow==7.2.0
-pynput==1.6.8
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2020.1
-scipy==1.5.2
-seaborn==0.10.1
-six==1.15.0
-statsmodels==0.11.1
+psutil~=5.7.3
+cycler~=0.10.0
+keyboard~=0.13.5
+kiwisolver~=1.3.1
+matplotlib~=3.3.3
+numpy~=1.19.4
+pandas~=1.1.4
+patsy~=0.5.1
+Pillow~=8.0.1
+pynput~=1.7.1
+pyparsing~=2.4.7
+python-dateutil~=2.8.1
+pytz~=2020.4
+scipy~=1.5.4
+seaborn~=0.11.0
+six~=1.15.0
+statsmodels~=0.12.1
+ezdxf~=0.14.2
